BUGFIX: removed wrong parts